tests/snapshot/snapshots/snapshot__error_stderr_invalid_record_type.ncl.snap
---
source: tests/snapshot/main.rs
expression: err
---
error: invalid record literal
  ┌─ [INPUTS_PATH]/errors/invalid_record_type.ncl:4:1
  │
4 │ {a: Number, b = 1; r}
  │ ^^^^^^^^^^^^^^^^^^^^^
  │             │    │
  │             │    in presence of a tail
  │             can't use this record construct
  │
  = Using a polymorphic tail in a record literal `{ ..; a}` requires the rest of the literal to be a record type.
  = A record type is a literal composed only of type annotations, of the form `<field>: <type>`.
  = Value assignments such as `<field> = <expr>`, and metadata annotation (annotation, documentation, etc.) are forbidden.


